Fixed hidden elements being visible.

--- a/includes/ts_ck_entity_embed_browser.css
+++ b/includes/ts_ck_entity_embed_browser.css
@@ -33,3 +33,7 @@ ul.pager li {
     display: inline-block;
     list-style-type: none;
 }
+
+.element-invisible {
+    display: none;
+}
